cluster/apps/searxng/deployment.yaml
---
apiVersion: apps/v1
kind: Deployment
metadata:
  labels:
    app.kubernetes.io/name: searxng
    app.kubernetes.io/version: sha256_b2211b2ad11fc
  name: searxng
spec:
  replicas: 1
  selector:
    matchLabels:
      app.kubernetes.io/name: searxng
  template:
    metadata:
      labels:
        app.kubernetes.io/name: searxng
        app.kubernetes.io/version: sha256_b2211b2ad11fc
    spec:
      automountServiceAccountToken: false
      enableServiceLinks: false
      containers:
      - image: searxng/searxng@sha256:b2211b2ad11fc9822ed8d94502a609a862d6587e13f052e18847559586c76b71
        name: searxng
        ports:
        - containerPort: 8080
          name: searxng
        volumeMounts:
        - mountPath: /etc/searxng
          name: configmap-volume
        - mountPath: /usr/local/searxng/searx/static/themes/simple
          name: pennant-volume
          readOnly: true
        resources:
          requests:
            cpu: 100m
            memory: 128Mi
          limits:
            cpu: 500m
            memory: 512Mi
        securityContext:
          capabilities:
            drop:
            - ALL
          allowPrivilegeEscalation: false
      volumes:
      - name: configmap-volume
        configMap:
          name: searxng-configmap
      - name: pennant-script-volume
        configMap:
          name: searxng-pennant
      - name: pennant-volume
        emptyDir: {}
      securityContext:
        fsGroup: 1000
        runAsUser: 1000
        runAsGroup: 1000
        runAsNonRoot: true
        seccompProfile:
          type: RuntimeDefault
