cluster/apps/searxng/service.yaml
---
apiVersion: v1
kind: Service
metadata:
  annotations:
    netbird.io/expose: "true"
    netbird.io/groups: cluster-services
  labels:
    app.kubernetes.io/name: searxng
    app.kubernetes.io/version: sha256_b22
  name: searxng
spec:
  selector:
    app.kubernetes.io/name: searxng
  ports:
  - name: http-searxng
    port: 8080
    targetPort: 8080
