cluster/apps/searxng/proxy-service-entry.yaml
apiVersion: networking.istio.io/v1alpha3
kind: ServiceEntry
metadata:
  name: searxng-proxy-service-entry
spec:
  hosts:
  - gluetun-proxy.gluetun-proxy.svc.cluster.local
  ports:
  - number: 8888
    name: tcp
    protocol: TCP
  location: MESH_EXTERNAL
  resolution: DNS
