cluster/apps/searxng/service-entry.yaml
apiVersion: networking.istio.io/v1beta1
kind: ServiceEntry
metadata:
  name: gluetun-proxy-entry
spec:
  hosts:
    - gluetun-proxy.gluetun-proxy.svc.cluster.local
  ports:
    - number: 8888
      name: http
      protocol: HTTP
  location: MESH_EXTERNAL
  resolution: DNS
