cluster/apps/searxng/network-policy.yaml
---
apiVersion: networking.k8s.io/v1
kind: NetworkPolicy
metadata:
  name: searxng-networkpolicy
spec:
  policyTypes:
  - Ingress
  ingress:
  - from:
    - namespaceSelector:
        matchLabels:
          kubernetes.io/metadata.name: netbird
      podSelector:
        matchLabels:
          app.kubernetes.io/name: networkrouter
    - namespaceSelector:
        matchLabels:
          kubernetes.io/metadata.name: internal-gateway
      podSelector:
        matchLabels:
          app.kubernetes.io/name: internal-gateway
